--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,7 @@ target/
 
 # Jupyter Notebook
 .ipynb_checkpoints
+Untitled*.ipynb
 
 # pyenv
 .python-version
@@ -99,3 +100,9 @@ ENV/
 
 # mypy
 .mypy_cache/
+
+# presentation files
+*.key
+
+# misc
+misc/
